--- a/apps/frontend/buidlai_seoul2025/src/index.css
+++ b/apps/frontend/buidlai_seoul2025/src/index.css
@@ -3,6 +3,18 @@
 
 @custom-variant dark (&:is(.dark *));
 
+body {
+  margin: 0;
+  display: flex;
+  place-items: center;
+  min-width: 320px;
+  min-height: 100vh;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  overflow-x: hidden;
+}
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -57,14 +69,6 @@ a {
 }
 a:hover {
   color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
 }
 
 h1 {
